// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eslint-overrides > eslint-overrides 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "node_modules/**/*",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "rules": {
          "react/react-in-jsx-scope": "error",
        },
      },
    ],
    "plugins": [
      "react",
    ],
    "rules": {},
  },
  "warnings": [],
}
`;

exports[`eslint-overrides --js-plugins > eslint-overrides--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "node_modules/**/*",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "rules": {
          "react/react-in-jsx-scope": "error",
        },
      },
    ],
    "plugins": [
      "react",
    ],
    "rules": {},
  },
  "warnings": [],
}
`;

exports[`eslint-overrides --type-aware > eslint-overrides--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "node_modules/**/*",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "rules": {
          "react/react-in-jsx-scope": "error",
        },
      },
    ],
    "plugins": [
      "react",
    ],
    "rules": {},
  },
  "warnings": [],
}
`;

exports[`eslint-overrides merge > eslint-overrides--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "node_modules/**/*",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
        ],
        "rules": {
          "react/react-in-jsx-scope": "off",
        },
      },
    ],
    "plugins": [
      "react",
    ],
    "rules": {
      "react/react-in-jsx-scope": "error",
    },
  },
  "warnings": [],
}
`;
